deploy/kubernetes/base/networking/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-http-redirect
  labels:
    route-binding.online-boutique.io/gateway: public-web
    route-binding.online-boutique.io/listener: http
spec:
  parentRefs:
    - name: generic-web
      namespace: generic-gateway-namespace
      sectionName: generic-http-section
  hostnames:
    - generic.example.invalid
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  labels:
    route-binding.online-boutique.io/gateway: public-web
    route-binding.online-boutique.io/listener: https
spec:
  parentRefs:
    - name: generic-web
      namespace: generic-gateway-namespace
      sectionName: generic-https-section
  hostnames:
    - generic.example.invalid
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 30s
        backendRequest: 25s
      backendRefs:
        - name: frontend
          port: 80
